---
source: crates/service/tests/diagnostics/typeck/local.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 4,
          "character": 4
        },
        "end": {
          "line": 4,
          "character": 16
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32], found [f32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 3,
                "character": 4
              },
              "end": {
                "line": 3,
                "character": 15
              }
            }
          },
          "message": "expected type `i32`, found `f32`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 4,
          "character": 16
        },
        "end": {
          "line": 4,
          "character": 17
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [], found [i32] at the end"
    }
  ]
}
